@startuml

title __SERVICES's Class Diagram__\n


    namespace om.fs.springboot {
      namespace services {
        class com.fs.springboot.services.LogService {
            + setLogService()
        }
      }
    }

  

    namespace om.fs.springboot {
      namespace services {
        class com.fs.springboot.services.SpeechTranscriberService {
            + SpeechTranscriberService()
            + transcribe()
        }
      }
    }


    namespace om.fs.springboot {
      namespace services {
        class com.fs.springboot.services.ToneAnalyzerService {
            + ToneAnalyzerService()
            + getToneOptions()
        }
      }
    }


  com.fs.springboot.services.SpeechTranscriberService o-- com.fs.springboot.dao.SpeechTranscriberDao : speechTranscriberDao
  com.fs.springboot.services.ToneAnalyzerService o-- com.fs.springboot.dao.ToneAnalyzerDao : toneAnalyzerDao


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
